--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .todo__tarefas-lista li {
-    /* border-bottom: 1px solid #ccc; */
+    /*border-bottom: 1px solid #ccc; */
     padding: 0.5rem;
     font-size: 1rem;
     list-style: none;
@@ -69,6 +69,11 @@ body {
 }
 
 .todo__tarefas-lista li .checked {
+    color: #ccc;
+    text-decoration: line-through; 
+}
+
+.checked {
     color: #ccc;
     text-decoration: line-through; 
 }
